--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ html {
   /* 10px / 16px = 0.625 = 62.5% */
   /* Percentage of user's browser font-size setting */
   font-size: 62.5%;
-  color: white;
+  color: #fdfdfc;
 }
 
 body {
