--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,16 +1,19 @@
 .content__day {
   height: 25rem;
-  min-width: 15rem;
-  max-width: 90%;
-  background: rgba(27, 26, 29, 0.8);
+  min-width: 10rem;
+
+  background: rgba(27, 26, 29, 0.6);
   border-radius: 1rem;
-  transition: all 0.5s;
+  transition: all 0.4s;
   cursor: pointer;
+  overflow: hidden;
+}
+
+.content__day:hover {
+  box-shadow: 0px 1px 5px 1px rgba(255, 255, 255, 0.3);
 }
 
 .selected__day {
-  background-color: rgba(188, 216, 236, 0.8);
-  flex-grow: 1;
-  transition: all 0.4s 0.1s;
+  background-color: rgba(255, 255, 255, 0.8);
   color: #101015;
 }
