--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap");
+
 * {
   padding: 0;
   margin: 0;
@@ -9,6 +11,7 @@ html {
   /* 10px / 16px = 0.625 = 62.5% */
   /* Percentage of user's browser font-size setting */
   font-size: 62.5%;
+  font-family: "Monserrat", sans-serif;
   color: #fdfdfc;
 }
 
@@ -17,5 +20,5 @@ body {
   width: 100%;
   margin: 0;
 
-  overflow: hidden;
+  overflow-x: hidden;
 }
