--- a/src/layout/Content/Content.css
+++ b/src/layout/Content/Content.css
@@ -2,27 +2,20 @@
   display: grid;
   width: 90wv;
   grid-template-columns: 1.2fr 1.2fr;
-  margin: 5rem;
-  gap: 4rem;
+  margin: 8rem 5rem 0rem;
 }
 
 .content__main {
   display: grid;
-  grid-template-rows: 1fr 1fr;
-  margin-top: -2rem;
+  grid-template-rows: 1fr 0.5fr;
 }
 
 .content__main--days {
   display: flex;
   gap: 3rem;
-  align-items: center;
-  padding: 3rem 5rem;
   justify-content: center;
+  align-items: center;
 }
 .content__main--astro {
-  padding: 5rem 8rem;
-}
-
-.content__side {
-  margin-top: 2.5rem;
+  padding: 1rem 10rem;
 }
