--- a/src/components/Canvas/Canvas.css
+++ b/src/components/Canvas/Canvas.css
@@ -1,5 +1,16 @@
 .background {
-  background: #0e3747;
+  background: #44a08d; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to left,
+    #093637,
+    #44a08d
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to left,
+    #093637,
+    #44a08d
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
   position: fixed;
   height: 100%;
   width: 100%;
