--- a/src/layout/Content/Content.css
+++ b/src/layout/Content/Content.css
@@ -2,20 +2,20 @@
   display: grid;
   width: 90wv;
   grid-template-columns: 1.2fr 1.2fr;
-  margin: 8rem 5rem 0rem;
+  margin: 8rem 2rem 0rem;
 }
 
 .content__main {
   display: grid;
   grid-template-rows: 1fr 0.5fr;
+  margin: 8rem 12rem;
 }
 
 .content__main--days {
   display: flex;
   gap: 3rem;
-  justify-content: center;
   align-items: center;
 }
 .content__main--astro {
-  padding: 1rem 10rem;
+  padding: 0 2rem;
 }
